feat: add run example